--- a/src/index.jade
+++ b/src/index.jade
@@ -15,21 +15,65 @@ html
     .space {
       background-image: url('images/space-your-face.jpg')
     }
+    
+    .maxwell {
+      background-image: url('images/maxwell.gif')
+    }
+    
+    .krang {
+      background-image: url('images/krang.gif')
+    }
+    
+    .brain {
+      background-image: url('images/brain.gif')
+    }
+    
+    .trippy {
+      background-image: url('images/trippy.gif')
+    }
+    
+    .trippy-too {
+      background-image: url('images/trippy-3.gif')
+    }
+    
+    .melon-head {
+      background-image: url('images/melon-1.png')
+    }
+    
+    .no-ear {
+      background-image: url('images/melon-2.jpg')
+    }
+    
+    .melon-head-two {
+      background-image: url('images/melon-4.jpg')
+    }
+
+    .melon-head-three {
+      background-image: url('images/melon-3.jpg')
+    }
+    
+    .melon-head-four {
+      background-image: url('images/melon-5.jpg')
+    }
+    
+    .doors {
+      background-image: url('images/doors.gif')
+    }
 
   body
 
     article
 
       section
-        h2 Node.js versions:
-        h3 How do they work?
+        h2 Space your face:
+        h3 Perceptual Audio for Fun and Profit
         h4 With your host Myles Borins
         h4
           a(href='https://twitter.com/thealphanerd') @thealphanerd
-        p  Node Interactive US 2016
+        p  Brooklyn JS December 2016
         
       section(data-bespoke-backdrop='hello')
-        h1 Howdy!
+        h1 Sup'
         
       section
         h1 My Name is Myles
@@ -42,10 +86,51 @@ html
         img(src='images/ibm.jpg' alt='Eye Bee M by Paul Rand')
         
         h5 The opinions expressed in this talk are solely my own
+
+      section(data-bespoke-backdrop='maxwell')
+        h1 Today we are going to talk about sound
+      
+      section(data-bespoke-backdrop='krang')
+        h1 Specifically how our brains interpret sound in space
+        
+      section(data-bespoke-backdrop='brain')
+        h1 So we can hack our brains
+        
+      section(data-bespoke-backdrop='trippy')
+        h1 Placing in sounds in space.
       
       section(data-bespoke-backdrop='space')
-        h1 Space Your Face
+        h1 To space your face.
 
+      section(data-bespoke-backdrop='melon-head')
+        h1 Imagine, your head is a melon
+        //- img.headroom(src='images/melon-1.png' alt='melon head with headphones' width='200px')
+      
+      section
+        h1 I know what you are thinking
+      
+      section(data-bespoke-backdrop='no-ear')
+        h1 Melons do not have ears silly
+        //- img.headroom(src='images/melon-2.jpg' alt='melons do not have ears' width='500px')
+      
+      section
+        img(src='images/bear-with-me.jpg' alt='bear with me')
+      
+      section(data-bespoke-backdrop='melon-head-two')
+        h1 imagine, your head is a melon
+      
+      section(data-bespoke-backdrop='melon-head-three')
+        h1 with two holes for ears
+      
+      section(data-bespoke-backdrop='melon-head-four')
+        h1 Floating in an anechoic chamber
+
+      section(data-bespoke-backdrop='trippy-too')
+        h1 Trippy, eh?
+      
+      section(data-bespoke-backdrop='doors')
+        h2 The Doors of Perception are Opened
+        h3 What do we have to learn?
       section
         h2 Thank You
         img.headroom(src='images/best-gif-evar.gif' alt='a surfing puppy' width='20%')
