Some mathy shit

--- a/src/index.jade
+++ b/src/index.jade
@@ -128,9 +128,72 @@ html
       section(data-bespoke-backdrop='trippy-too')
         h1 Trippy, eh?
       
+      section
+        h1 Your perception would be tripping too!
+        
+      section
+        h2 Our brains can easily decipher
+        h3 how far away a sound is.
+        h3 and if the sound is coming from your left or right.
+        
+      section
+        h1 The amount of energy reaching each ear gives this away
+      
+      section
+        h1 Louder sounds are closer, softer further away
+      
+      section
+        h2 If the sound reaches a particular ear first
+        h3 we know about the direction it came from
+        
+      section
+        h1 But if we were a floating melon in an anechoic chamber
+      
+      section
+        h1 We would have no way of knowing the height of the sound
+      
+      section
+        h1 We would also have no idea if it was coming from in front or behind
+      
+      section
+        h2 Thankfully we are not floating melon heads
+        h3 with holes for ears in anechoic chambers!
+      
+      section
+        h2 Our ear lobes and body act as a filter,
+        h3 leaving a unique signature on the waveform
+      
+      section
+        h2 Our brains are able to decode this signature
+        h3 and place the sounds accordingly
+      
       section(data-bespoke-backdrop='doors')
         h2 The Doors of Perception are Opened
-        h3 What do we have to learn?
+        h3 What can we do with this knowledge?
+      
+      section
+        h1 It turns out that sometimes our heads are melons with holes for ears in an anechoic chamber
+        
+      section
+        h1 Everytime we put on headphones!
+      
+      section
+        h2 We can use principals of signal processing
+        h3 to create filters
+        h4 that can emulate our body's signature
+      
+      section
+        h1 HRTF
+        h4 Head related transfer function
+        
+      section
+        h1 What is a transfer function
+      
+      section
+        h2 Some mathy shit
+        h3 fancy way of saying a black box
+        h4 with defined input and output
+      
       section
         h2 Thank You
         img.headroom(src='images/best-gif-evar.gif' alt='a surfing puppy' width='20%')
