Maybe too much?

--- a/src/index.jade
+++ b/src/index.jade
@@ -195,6 +195,31 @@ html
         h4 with defined input and output
       
       section
+        h3 signal ➡️ transfer-function ➡️ modified-signal
+      
+      section
+        h2 With an HRTF we can provice an audio signal
+        h3 a position in space
+        h4 and get back a binaural stereo signal
+      
+      section
+        h2 Binaural is a classic form a spatialized recording
+        h3 where two microphones are placed on a model where the ears should be
+        h4 this model could likely be a melon with two holes
+      
+      section
+        h1 We have HRTF in the browser!
+        
+      section
+        h1 The panner node!
+      
+      section
+        h1 Demo Time
+      
+      Section
+        h3 I'm Probably out of time by now, but if I'm not I should ramble about Ambisonics and Wavefield arrays
+      
+      section
         h2 Thank You
         img.headroom(src='images/best-gif-evar.gif' alt='a surfing puppy' width='20%')
         h3 Myles Borins
