--- a/src/index.jade
+++ b/src/index.jade
@@ -95,6 +95,18 @@ html
     .binaural-experience {
       background-image: url('images/binaural-experience.jpg')
     }
+    
+    .weirdo-binaural {
+      background-image: url('images/weirdo-binaural.jpg')
+    }
+    
+    .seal {
+      background-image: url('images/seal.gif')
+    }
+    
+    .cool {
+      background-image: url('images/cool.gif')
+    }
 
   body
 
@@ -249,10 +261,21 @@ html
         h2 When you later play back and listen to the binaural recording
         h3 You will experience the spatialization of the original recording
         h4 Like VR for your melon!
+
+      section(data-bespoke-backdrop='weirdo-binaural')
+        h2 These various binaural recoring setups
+        h3 Are pretty rad
+        h4 but they require special hardware
+      
+      section(data-bespoke-backdrop='seal')
+        h1 Why bother with all that proprietary jazz
       
       section
-        h1 We have HRTF in the browser!
-        
+        h1 We have HRTFs in the browser!
+
+      section
+        img(src='images/cool.gif' alt='wow that is cool said the panda')
+
       section
         h1 The panner node!
       
