Good enough for moi

--- a/src/index.jade
+++ b/src/index.jade
@@ -243,7 +243,7 @@ html
         h1 Everytime we put on headphones!
       
       section
-        h2 We can use principals of signal processing
+        h2 We can use principles of signal processing
         h3 to create filters
         h4 that can emulate our body's signature
       
@@ -264,8 +264,8 @@ html
         //- h3 signal ➡️ transfer-function ➡️ modified-signal
       
       section
-        h2 An HRTF take a signal
-        h3 a position in space
+        h2 An HRTF takes a signal
+        h3 a location to position that signal in space
         h4 and returns a stereo signal with binaural encoding
       
       section(data-bespoke-backdrop='binaural-dummy')
@@ -287,7 +287,7 @@ html
         h1 Why bother with all that proprietary jazz
       
       section
-        h1 We have HRTFs in the browser!
+        h1 We have an HRTF panner in the browser!
 
       section
         img(src='images/cool.gif' alt='wow that is cool said the panda')
