--- a/src/index.jade
+++ b/src/index.jade
@@ -309,6 +309,9 @@ html
             osc.start();
       section
         h1 Demo Time
+        h2.headroom Surf to
+        h3
+          a(href="https://kni.sh/perceptual-tux/") https://kni.sh/perceptual-tux/
       
       section
         h1 HRTFs and Binaural are cool
