--- a/src/index.jade
+++ b/src/index.jade
@@ -311,7 +311,7 @@ html
         h1 Demo Time
         h2.headroom Surf to
         h3
-          a(href="https://kni.sh/perceptual-tux/") https://kni.sh/perceptual-tux/
+          a(href="https://github.com/thealphanerd/perceptual-tux/") https://kni.sh/pertux/
       
       section
         h1 HRTFs and Binaural are cool
