--- a/src/index.jade
+++ b/src/index.jade
@@ -116,8 +116,8 @@ html
       background-image: url('images/maticulous.jpg')
     }
 
-    .overtone {
-      background-image: url('images/overtone.png')
+    .omnitone {
+      background-image: url('images/omnitone.png')
     }
     
     .melted-face {
@@ -377,10 +377,10 @@ html
         h4 pipe it through virtual speakers
         h5 and decode it to headphones binaurally
       
-      section(data-bespoke-backdrop='overtone')
+      section(data-bespoke-backdrop='omnitone')
         h1 ALL IN THE FREAKING BROWSER
         p.headroom
-          a(href="https://www.npmjs.com/package/omnitone") Diagram from the overtone library
+          a(href="https://www.npmjs.com/package/omnitone") Diagram from the omnitone library
 
       section(data-bespoke-backdrop='melted-face')
         h1 You may now pick your melted faces up from the ground
