--- a/src/index.jade
+++ b/src/index.jade
@@ -3,7 +3,7 @@ html
   head
     meta(charset='utf-8')
     meta(name='viewport', content='width=device-width, initial-scale=1, maximum-scale=1')
-    title Node.js versions, how do they work?
+    title Space your face
 
     link(rel='stylesheet', type='text/css', href='build/build.css')
 
@@ -130,26 +130,26 @@ html
 
       section
         h2 Space your face:
-        h3 Perceptual Audio for Fun and Profit
+        h3 this is your brain on spatialized audio
         h4 With your host Myles Borins
         h4
           a(href='https://twitter.com/thealphanerd') @thealphanerd
-        p  Brooklyn JS December 2016
+        p  Berlin Web Audio Meetup ~ May 2017
         
       section(data-bespoke-backdrop='hello')
-        h1 Sup'
+        h1 Moin
         
       section
         h1 My Name is Myles
         img.headroom(src='images/me.jpg' alt='itsa me!' width='200px' height='200px')
       
       section
-        h3 I currently work at a small disruptive startup called IBM
-        h4 contributing to Node.js
+        h3 I am gainfully employed by Google as a Developer Advocate
+        h4 Focusing on the Node.js ecosystem running on GCP
         
-        img(src='images/ibm.jpg' alt='Eye Bee M by Paul Rand')
+        img(src='images/gcp.png' alt='Google Clud Platform' style='background-color:white;')
         
-        h5 The opinions expressed in this talk are solely my own
+        h5.headroom The opinions expressed in this talk are solely my own
 
       section(data-bespoke-backdrop='maxwell')
         h1 Today we are going to talk about sound
@@ -161,7 +161,7 @@ html
         h1 So we can hack our brains
         
       section(data-bespoke-backdrop='trippy')
-        h1 Placing in sounds in space.
+        h1 Placing sounds in space.
       
       section(data-bespoke-backdrop='space')
         h1 To space your face.
@@ -255,9 +255,10 @@ html
         h1 What is a transfer function
       
       section(data-bespoke-backdrop='math')
-        h2 Some mathy shit
+        h2 Some mathy math
         h3 fancy way of saying a black box
         h4 with defined input and output
+        h5 and no side effects
       
       section
         img(src='images/transfer-function.png' alt='a simple flat block diagram')
