that would have been embarassing

--- a/src/index.jade
+++ b/src/index.jade
@@ -131,9 +131,7 @@ html
       section
         h2 Space your face:
         h3 this is your brain on spatialized audio
-        h4 With your host Myles Borins
-        h4
-          a(href='https://twitter.com/thealphanerd') @thealphanerd
+        h4 With your host @MylesBorins
         p  Berlin Web Audio Meetup ~ May 2017
         
       section(data-bespoke-backdrop='hello')
@@ -390,6 +388,6 @@ html
         h2 Thank You
         img.headroom(src='images/best-gif-evar.gif' alt='a surfing puppy' width='20%')
         h3 Myles Borins
-        h4 @thealphanerd
+        h4 @MylesBorins
 
     script(src='build/build.js')
