--- a/src/index.jade
+++ b/src/index.jade
@@ -132,7 +132,7 @@ html
         h2 Space your face:
         h3 this is your brain on spatialized audio
         h4 With your host @MylesBorins
-        p  Berlin Web Audio Meetup ~ May 2017
+        p  Berlin Web Audio Meetup - May 2017
         
       section(data-bespoke-backdrop='hello')
         h1 Moin
@@ -385,9 +385,25 @@ html
         h1 You may now pick your melted faces up from the ground
 
       section
+        h1 These systems are not perfect
+
+      section
+        h1 Alogithms have bias
+
+      section
+        h2 If only male bodies are used to design the HRTFs
+        h3 The exprience will not work nearly as well for people with other body types
+
+      section
+        h1 We cannot pretend algorithms are apolotical
+
+      section
+        h2 While bad binaural sound is not going to kill a person
+        h3 An algorithm affected by unconcious bias could
+
+      section
         h2 Thank You
         img.headroom(src='images/best-gif-evar.gif' alt='a surfing puppy' width='20%')
-        h3 Myles Borins
-        h4 @MylesBorins
+        h3 @MylesBorins
 
     script(src='build/build.js')
