--- a/src/index.jade
+++ b/src/index.jade
@@ -132,10 +132,10 @@ html
         h2 Space your face:
         h3 this is your brain on spatialized audio
         h4 With your host @MylesBorins
-        p  Berlin Web Audio Meetup - May 2017
+        p  DenverScript - June 2017
         
       section(data-bespoke-backdrop='hello')
-        h1 Moin
+        h1 Oh Hai!
         
       section
         h1 My Name is Myles
@@ -310,7 +310,7 @@ html
         h1 Demo Time
         h2.headroom Surf to
         h3
-          a(href="https://github.com/thealphanerd/perceptual-tux/") https://kni.sh/pertux/
+          a(href="https://github.com/MylesBorins/perceptual-tux/") https://kni.sh/pertux/
       
       section
         h1 HRTFs and Binaural are cool
